# ist-delegate-election

./: README.md  flake.nix
.github/: labeler.yml
.github/workflows/: ci-build-test.yml  ci-formatting.yml  labeler.yml
backend/: Cargo.toml  generate-typeshare.sh  typeshare.toml
backend/entity/: Cargo.toml  generate-entities.sh
backend/entity/src/: admin.rs  election.rs  election_vote.rs  lib.rs  mod.rs  nomination.rs  nomination_log.rs  prelude.rs  user_degree_override.rs  vote_log.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230917_143144_nomination_log.rs  m20231001_091623_nomination_valid_null.rs  m20231008_162240_user_degree_override.rs
backend/src/: auth_utils.rs  cache.rs  crypto_utils.rs  dtos.rs  election_utils.rs  errors.rs  main.rs
backend/src/routes/: admin.rs  config.rs  degrees.rs  elections.rs  login.rs  mod.rs  search_user.rs  user_degree_overrides.rs
backend/src/services/: fenix.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  api.ts  i18n.ts
frontend/src/@types/: api.d.ts  api.ts  i18next.d.ts
frontend/src/components/: Navbar.tsx
frontend/src/components/admin/: DegreeTypeElections.tsx
frontend/src/components/admin/forms/: BulkCreateElectionsSubmitButton.tsx  DateRangeInput.tsx  DegreeSelectionInput.tsx  ElectionRoundInput.tsx  YearSelectionInput.tsx
frontend/src/components/election/: ElectionCard.tsx  NominationCard.tsx
frontend/src/components/fenix/: FenixAvatar.tsx
frontend/src/components/forms/: BulkCreateElectionsSubmitButton.tsx  CsvFileInput.tsx  DegreeSelectionInput.tsx  RadioCard.tsx  RangeInput.tsx  RoundInput.tsx  SearchPersonInput.tsx  YearSelectionInput.tsx
frontend/src/hooks/: useLocalizedString.ts  useSortAndGroupDegrees.ts
frontend/src/locales/en-GB/: translation.json
frontend/src/locales/pt-PT/: translation.json
frontend/src/routes/: elections.tsx  error.tsx  login.tsx  logout.tsx  root.tsx
frontend/src/routes/admin/: admins.tsx  bulk-validate-nominations.tsx  election.tsx  elections.tsx  root.tsx
frontend/src/routes/admin/user-degree-override/: bulk-add.tsx  root.tsx
frontend/src/routes/election/: nominate.tsx  root.tsx  vote.tsx
nix/: module.nix  overlay.nix  pkg-backend.nix  pkg-frontend.nix
