[package]
name = "ist-delegate-election"
version = "0.1.0"
edition = "2021"

[dependencies]
async-session = "3.0.0"
axum = "0.6.18"
axum-sessions = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
