[package]
name = "ist-delegate-election"
version.workspace = true
edition.workspace = true

[workspace]
members = [".", "entity", "migration"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sea-orm = { version = "0.12.2", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "macros"] }

[dependencies]
async-session = "3.0.0"
axum = { version = "0.6.18", features = ["macros"] }
axum-sessions = "0.5.0"
chrono = "0.4.26"
entity = { path = "entity" }
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
migration = { path = "migration" }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
sea-orm.workspace = true
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.7"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["add-extension", "fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typeshare = "1.0.1"
